pom for deploy