@@ -1,8 +1,11 @@
+<!-- mvn source:jar javadoc:jar install deploy -Pdeploy
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.darien-project.failure-a</groupId>
   <artifactId>failure-a</artifactId>
   <version>0.0.1</version>
+  <name>${project.groupId}:${project.artifactId}</name>
   <description>
     The Darien Project for Java makes handling code failure easy, telling you on which line the failure happene.
     By focussing on the failure path you will build better, working code more quickly.
@@ -44,18 +47,35 @@
   </properties>
  <build>
     <plugins>
-		
+		<plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>3.5.0</version>
+	    <configuration>
+				<executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+            	</executions>
+				<additionalJOptions>
+					--enable-preview --release 20
+				</additionalJOptions>
+	    </configuration>
+        </plugin>	
 	    <plugin>
 	      <groupId>org.sonatype.plugins</groupId>
 	      <artifactId>nexus-staging-maven-plugin</artifactId>
-	      <version>1.6.7</version>
+	      <version>1.6.13</version>
 	      <extensions>true</extensions>
 	      <configuration>
 	        <serverId>ossrh</serverId>
 	        <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
 	        <autoReleaseAfterClose>false</autoReleaseAfterClose>
 	      </configuration>
-	    </plugin>
+	    </plugin>     	    
 	    <plugin>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.1</version>
@@ -71,7 +91,11 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
-                <argLine>--enable-preview</argLine>
+                <argLine>
+					--enable-preview
+				    --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
+				    --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
+				</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -97,6 +121,7 @@
 	    </plugin>
     </plugins>
 </build>
+
 <reporting>
 	<plugins>
         <plugin>
@@ -194,16 +219,17 @@
 	                <plugin>
 	                    <groupId>org.apache.maven.plugins</groupId>
 	                    <artifactId>maven-source-plugin</artifactId>
-	                    <version>3.2.1</version>
+	                    <version>3.3.0</version>
 	                    <executions>
 	                        <execution>
 	                            <id>attach-sources</id>
+	                            <phase>verify</phase>
 	                            <goals>
 	                                <goal>jar-no-fork</goal>
 	                            </goals>
 	                        </execution>
 	                    </executions>
-	                </plugin>
+	                   </plugin>
 	            </plugins>
 	        </build>
 	    </profile>
